# bitcoin-client

./: .rustfmt.toml  Cargo.toml
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs  queryable.rs
json/: Cargo.toml
json/src/: lib.rs
