[workspace]

members = [
    "json",
    "client"
]
resolver = "3"

[workspace.dependencies]
# Workspace
bitcoin-json = { version = "0.1.0", path = "json" }

bitcoin = { version = "0.32" }
async-trait = "0.1"
jsonrpsee = { version = "0.25" }
tokio = { version = "1" }
tracing = "0.1"
thiserror = "2.0"
base64 = "0.22"
http = "1.3"
serde = { version = "1" }
serde_json = "1"
