[package]
name = "bitcoin-client"
version = "0.19.0"
edition = "2024"

[dependencies]
bitcoin-rpc-json = { workspace = true }
async-trait = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "client", "macros"] }
tokio = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
