[package]
name = "bitcoin-client"
version = "0.1.0"
edition = "2024"
description = "A client library for interacting with Bitcoin. Provides methods for communication with Bitcoin Core."
authors = ["39george <39george.enjoy@gmail.com>"]
homepage = "https://github.com/39george/bitcoin-client"
repository = "https://github.com/39george/bitcoin-client"
documentation = "https://docs.rs/bitcoin-client"
readme = "README.md"
license = "MIT"

[dependencies]
bitcoin-json = { workspace = true }
async-trait = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "client", "macros"] }
tokio = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
