[package]
name = "bitcoin-json"
version = "0.1.0"
edition = "2024"

[package.metadata]
description = "Defines the types to deserialize Bitcoin Core responses and serialize parameters for API communication."
authors = ["39george <39george.enjoy@gmail.com>"]
homepage = "https://github.com/39george/bitcoin-client"
repository = "https://github.com/39george/bitcoin-client"
documentation = "https://docs.rs/bitcoin-json"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bitcoin = { workspace = true, features = ["serde", "rand"] }
